# TinyGate

./: BenchMark.md  README.md
config/: gateway.conf
src/: CMakeLists.txt  client_accept.h  client_connection.cpp  connection_base.h  dump_generator.cpp  dump_generator.h  gateway_manager.cpp  gateway_manager.h  gateway_profiler.h  main.cpp  queueserver_services.cpp  server_connection.cpp
src/client/: client_accept.cpp  client_connection.h  client_connection_queue.cpp  client_connection_queue.h  connection_base.cpp
src/gateway/: gateway_accept.cpp  gateway_accept.h  queueserver_api.h  queueserver_services.h  server_connection.h
src/profiler/: gateway_profiler.cpp
